--- a/.github/workflows/main_mapstoevents.yml
+++ b/.github/workflows/main_mapstoevents.yml
@@ -81,5 +81,6 @@ jobs:
         with:
           app-name: 'MapsToEvents'
           slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: '.'
+
           
