--- a/.github/workflows/main_mapstoevents.yml
+++ b/.github/workflows/main_mapstoevents.yml
@@ -35,7 +35,10 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f TimerTrigger/requirements.txt ]; then pip install -r TimerTrigger/requirements.txt; fi
+
 
       # Optional: Add step to run tests here
 
@@ -84,3 +87,4 @@ jobs:
           package: '.'
 
           
+
