--- a/.github/workflows/main_mapstoevents.yml
+++ b/.github/workflows/main_mapstoevents.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python project to Azure Function App - MapsToEvents
 
 on:
@@ -71,19 +67,19 @@ jobs:
         run: |
           unzip release.zip
           rm release.zip
-        
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DBE1C1880EF84FF39E0294626FE7693A }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E6E0041C61294E6C814B6F6F2CF5759E }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4D8C901B122D41058AF58D7BB06479F8 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
-      - name: Deploy to Azure Functions
+      - name: Deploy to Azure Functions (Local Build)
         uses: Azure/functions-action@v1
         id: deploy-to-function
         with:
           app-name: 'MapsToEvents'
           slot-name: 'Production'
           package: '.'
-
+          scm-do-build-during-deployment: false
